no arquivo cria-custom-post-tyoe-pet.php, comentei a linha 'supports' para outra linha 'supports' com mais parametros, para ver quais recursos libera, principalmente quero o recurso de thumbnail

--- a/style.css
+++ b/style.css
@@ -52,3 +52,9 @@ e as mundacas feitas no tema filho "GruposPET" nao sera perdida.
     color: #fff;
 
 }
+
+.light_header #navy > li > a,
+.light_header #navy > li > .slicknav_row > a {
+    color: #484848;
+
+}
