coloquei 2 linhas de código no single.php, para que quando entre em uma postagem mostre os metadados dessa postagem

--- a/style.css
+++ b/style.css
@@ -65,3 +65,7 @@ e as mundacas feitas no tema filho "GruposPET" nao sera perdida.
 	width: 20px;
 	background-color: yellow;
 }
+
+.negrito{
+	font-weight: 900;
+}
