trocando de tema pai do kyma para o tema onepress, e criando o arquivo page-home.php, pra colocar o slide show

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: GruposPET - Nacional
-Template: kyma
-Theme URI: https://www.webhuntinfotech.com/premium-themes/kyma-advanced-premium-wordpress-theme/
+Template: onepress
+Theme URI: https://github.com/kaiomudkt/wp-template-child-sitePET-nacional
 Author: Kaio Mitsuharu Lino Aida
 Author URI: https://github.com/kaiomudkt
 Description: Tema desenvolvido para o programa de educação tutorial
